--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Match The Pairs</title>
-  <link href="style.css" rel="stylesheet">
+  <link href="./css/style.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -40,106 +40,7 @@
       </div>
     </div>
     </div>
+    <div style="color:white;">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script>
-
-      function randomColor(){
-        return Math.random() * (255 - 0) + 0;
-      }
-
-      var arr = ["apple", "apple", "cat", "cat", "car", "car", "soccer", "soccer"];
-
-      function shuffle(arra1) {
-        var ctr = arra1.length,
-          temp, index;
-
-        // While there are elements in the array
-        while (ctr > 0) {
-          // Pick a random index
-          index = Math.floor(Math.random() * ctr);
-          // Decrease ctr by 1
-          ctr--;
-          // And swap the last element with it
-          temp = arra1[ctr];
-          arra1[ctr] = arra1[index];
-          arra1[index] = temp;
-        }
-        return arra1;
-      }
-
-      function shuffleCards() {
-        var tempCount = 0;
-        var tempArr = shuffle(arr);
-        document.querySelectorAll("img").forEach(item => {
-          console.log(item);
-          item.src = `img/${tempArr[tempCount++]}.png`;
-        });
-        tempCount = 0;
-        document.querySelectorAll(".front").forEach(item => {
-          console.log(item);
-          item.setAttribute("onclick", `flip(${tempCount},'${tempArr[tempCount++]}')`);
-          item.setAttribute("style", `background:rgb(${randomColor()},${randomColor()},${randomColor()})`);
-        });
-      }
-
-
-      function hide() {
-        document.getElementById("pop-up").classList.remove("animate");
-        window.location.reload(true);
-      }
-      var prev = {
-          val: "",
-          index: ""
-        },
-        curr = {
-          val: "",
-          index: ""
-        },
-        count = 0,
-        a, b;
-
-      function flip(index, val) {
-        document.querySelectorAll(".front")[index].classList.add("flipfront");
-        if (prev.val == "") {
-          prev.val = val;
-          prev.index = index;
-          console.log("prev : ", prev.val, "curr : ", curr.val, "original : ", val);
-        } else {
-          curr.val = val;
-          curr.index = index;
-          console.log("prev : ", prev.val, "curr : ", curr.val, "original : ", val);
-          if (prev.val == curr.val) {
-            console.log("correct");
-            count++;
-            prev = {
-              val: "",
-              index: ""
-            };
-            curr = {
-              val: "",
-              index: ""
-            };
-            if (count == 4) {
-              document.getElementById("pop-up").classList.add("animate");
-            }
-          } else {
-            console.log("Incorrect");
-            a = prev.index;
-            b = curr.index;
-            prev = {
-              val: "",
-              index: ""
-            };
-            curr = {
-              val: "",
-              index: ""
-            };
-            setTimeout(function () {
-              document.querySelectorAll(".front")[a].classList.remove("flipfront");
-              document.querySelectorAll(".front")[b].classList.remove("flipfront");
-            }, 1000);
-          }
-        }
-      }
-    </script>
+    <script src="./js/flip.js"></script>
 </body>
