--- a/index.html
+++ b/index.html
@@ -7,31 +7,63 @@
 </head>
 
 <body onload="shuffleCards()">
-  <h1>Click On The Cards To Make Pair</h1>
+  <h1>Make Pair</h1>
   <div class="container">
-    <div class="flex-container1">
+    <div class="flex-container1" style="top:0px;">
+      <div class="front"></div>
       <div class="front"></div>
       <div class="front"></div>
       <div class="front"></div>
       <div class="front"></div>
     </div>
     <div class="flex-container2" style="top:0px;">
-      <img width="300" height="300">
-      <img width="300" height="300">
-      <img width="300" height="300">
-      <img width="300" height="300">
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
     </div>
-    <div class="flex-container1">
+    <div class="flex-container1" style="top:150px;">
+      <div class="front"></div>
+      <div class="front"></div>
+      <div class="front"></div>
+      <div class="front"></div>
+      <div class="front"></div>
+    </div>
+    <div class="flex-container2" style="top:150px;">
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+    </div>
+    <div class="flex-container1" style="top:300px;">
+      <div class="front"></div>
       <div class="front"></div>
       <div class="front"></div>
       <div class="front"></div>
       <div class="front"></div>
     </div>
     <div class="flex-container2" style="top:300px;">
-      <img width="300" height="300">
-      <img width="300" height="300">
-      <img width="300" height="300">
-      <img width="300" height="300">
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+    </div>
+    <div class="flex-container1" style="top:450px;">
+      <div class="front"></div>
+      <div class="front"></div>
+      <div class="front"></div>
+      <div class="front"></div>
+      <div class="front"></div>
+    </div>
+    <div class="flex-container2" style="top:450px;">
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
+      <div class="back"><img></div>
     </div>
     <div id="pop-up">
       <div class="container">
@@ -40,7 +72,7 @@
       </div>
     </div>
     </div>
-    <div style="color:white;">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></div>
+    <div style="color:white;position: absolute;bottom:10px;width:100%;"><center>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></center></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/flip.js"></script>
 </body>
