--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
     <div id="pop-up">
       <div class="container">
         <h1>Victory</h1>
+        <img id="vic" style="width:50px;height:50px;">
         <div class="cross" onclick="hide()"><i class="fa fa-times"></i></div>
       </div>
     </div>
     </div>
-    <div style="color:white;position: absolute;bottom:10px;width:100%;"><center>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></center></div>
+    <div style="color:white;position: absolute;bottom:10px;width:100%;"><center>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,<a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></center></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/flip.js"></script>
 </body>
