--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
       <div class="back"><img></div>
       <div class="back"><img></div>
     </div>
+    <center>
     <div id="pop-up">
-      <div class="container">
+      <div class="container1">
         <h1>Victory</h1>
-        <img id="vic" style="width:50px;height:50px;">
+        <img id="vic" style="width:50px;height:50px;border-radius:0;">
         <div class="cross" onclick="hide()"><i class="fa fa-times"></i></div>
       </div>
     </div>
+  </center>
     </div>
     <div style="color:white;position: absolute;bottom:10px;width:100%;"><center>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,<a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></center></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
