--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
   <div style="color:white;position: absolute;bottom:10px;width:100%;">
     <center>Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a>,<a
         href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a> from <a
-        href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></center>
+        href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a><br>
+        &copy;Vaibhav Shukla</center>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/flip.js"></script>
