--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div id="pop-up">
         <div class="container1">
           <h1>Victory</h1>
-          <img id="vic" style="width:50px;height:50px;border-radius:0;">
+          <img id="vic" style="width:50px;height:50px;border-radius:0;margin:0;">
           <div class="cross" onclick="hide()"><i class="fa fa-times"></i></div>
         </div>
       </div>
