--- a/index.html
+++ b/index.html
@@ -82,5 +82,7 @@
         &copy;Vaibhav Shukla</center>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+  <script src="./js/touch.js"></script>
   <script src="./js/flip.js"></script>
 </body>
